<resources>
    <string name="app_name">RozeNavi</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_save">저장</string>
    <string name="current_location">현재위치</string>
    <string name="common_ok">확인</string>
    <string name="common_save">저장</string>
    <string name="common_cancel">취소</string>
    <string name="common_setting">설정</string>
    <string name="toast_message_log_save_success">GPS 정보를 저장하였습니다.</string>
    <string name="toast_message_log_save_fail">GPS 정보 저장에 실패하였습니다.</string>
    <string name="notification_content_title">경로주행</string>
    <string name="notification_content_text">목적지까지 경로안내중입니다.</string>
    <string name="permission_dialog_title">권한확인알림</string>
    <string name="permission_dialog_content">길안내를 위한 앱 권한 승인이 필요합니다.</string>
    <string name="permission_dialog_content_setting">길안내를 위한 앱 권한 승인이 필요합니다. \n앱 설정화면에서 권한을 활성화시켜 주시기 바랍니다.</string>
    <string name="permission_dialog_button_positive">권한확인</string>
    <string name="permission_dialog_button_positive_setting">권한승인</string>
    <string name="permission_dialog_button_negative">앱종료</string>
    <string name="permission_draw_overlay_dialog_message">다른앱 위에 그리기 설정이 필요합니다.</string>
    <string name="permission_draw_overlay_introduce_message">길안내 중 다른 앱을 실행 시에, 미니창을 통해 계속 길안내를 받으시려면\n[다른 앱 위에 그리기] 사용을 허용해 주세요.</string>
    <string name="search_bar_hint">장소, 주소 검색</string>
    <string name="drawer_menu_setting_car">차량설정</string>
    <string name="drawer_menu_setting_route">경로설정</string>
    <string name="drawer_menu_setting_route_adv">경로추가설정</string>
    <string name="drawer_menu_setting_sound">음성안내설정</string>
    <string name="toast_message_main_back_button">\'뒤로\'버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="toast_message_map_init_fail_result_success">Map SDK 초기화 성공</string>
    <string name="toast_message_map_init_fail_result_empty">AndroidManifest.xml에 giskey를 입력했는지 확인해 주세요</string>
    <string name="toast_message_map_init_fail_result_invalid">giskey형식이 올바르지 않습니다.전달받은 giskey를 정확하게 입력했는지 확인해 주세요</string>
    <string name="toast_message_map_init_fail_result_fail">giskey가 맞지 않습니다. 전달받은 giskey를 정확하게 입력했는지 확인해 주세요</string>
    <string name="dialog_navigation_init_fail_title">네비게이션 초기화 실패</string>
    <string name="dialog_navigation_init_fail_message">구글플레이 서비스가 업데이트가 필요합니다. 업데이트 후 다시 실행해
        주세요
    </string>
    <string name="dialog_navigation_init_fail_api_key_message">인증키 오류가 발생했습니다. 등록한 키가 올바른지 확인 후
        다시 실행해 주세요
    </string>
    <string name="dialog_navigation_init_fail_button">앱 종료</string>
    <string name="toast_message_save_recent_fail">데이터 저장에 실패 했습니다.</string>
    <string name="toast_message_search_fail">목적지 검색에 실패 하였습니다.</string>
    <string name="toast_message_last_search_result">마지막 검색 결과입니다.</string>
    <string name="search_empty_recent_location_list">최근 목적지 없음</string>
    <string name="toast_message_gps_signal_not_found">gps가 잡히지 않았습니다. 잠시후 다시 시도해 주세요.</string>
    <string name="route_type_view_toggle_select_route">경로선택 하기</string>
    <string name="route_type_view_toggle_show_tbt">상세경로 보기</string>
    <string name="route_edit_view_waypoint_input_null">미 설정된 항목을 확인하세요.</string>
    <string name="route_edit_view_waypoint_location_overlay">해당 목적지는 등록된 목적지입니다.</string>
    <string name="toast_message_navigation_stop">경로 안내를 종료합니다.</string>
    <string name="toast_message_navigation_arrived_destination">목적지에 도착하여 경로안내를 종료합니다.</string>
    <string name="toast_message_navigation_arrived_waypoint">경유지에 도착하였습니다. 다음장소로 이동합니다.</string>
    <string name="toast_message_navigation_traffic_update">실시간 교통정보를 반영중입니다.</string>
    <string name="toast_message_route_fail">경로 탐색에 실패하였습니다.</string>
    <string name="toast_message_reroute_auto">교통상황이 변경되어 경로를 재탐색합니다.</string>
    <string name="toast_message_location_deviated">경로를 이탈하여 재탐색 합니다.</string>
    <string name="toast_message_location_did_not_enter">경로에 진입하지 못하여 재탐색 합니다.</string>
    <string name="waypoint_dialog_title">경유지 근처에 도착했습니다.</string>
    <string name="waypoint_dialog_content">다음 목적지를 탐색하시겠습니까?</string>
    <string name="waypoint_dialog_button_positive">예</string>
    <string name="waypoint_dialog_button_negative">아니오</string>
    <string name="setting_route_activity_subtitle_route_1">경로선택 1</string>
    <string name="setting_route_activity_subtitle_route_2">경로선택 2</string>
    <string name="route_type_balanced">최적경로</string>
    <string name="route_type_highway">고속도로 우선</string>
    <string name="route_type_free_road">무료경로</string>
    <string name="route_type_shortest">최단경로</string>
    <string name="setting_sound_activity_subtitle_type">음성타입설정</string>
    <string name="setting_sound_activity_subtitle_option">음성안내선택</string>
    <string name="sound_type_soft">차분</string>
    <string name="sound_type_sporty">발랄</string>
    <string name="sound_option_fixed_speed_camera">고정식 카메라</string>
    <string name="sound_option_movable_speed_camera">이동식 카메라</string>
    <string name="sound_option_signal_violation_camera">신호위반 카메라</string>
    <string name="sound_option_bus_camera">버스전용 카메라</string>
    <string name="sound_option_traffic_camera">교통정보 수집 카메라</string>
    <string name="sound_option_stop_camera">주정차 단속 카메라</string>
    <string name="sound_option_overload_camera">과적차량 단속 카메라</string>
    <string name="sound_option_interrupt_camera">끼어들기 단속 카메라</string>
    <string name="sound_option_cctv">방범CCTV</string>
    <string name="sound_option_shoulder">갓길단속</string>
    <string name="sound_option_sharp_curve">급회전 구간</string>
    <string name="sound_option_accident_black_spot">사고다발 구간</string>
    <string name="sound_option_lane_decrease">좁아지는 지역</string>
    <string name="sound_option_rock_slide">낙석주의</string>
    <string name="sound_option_slippery_surface">미끄럼주의</string>
    <string name="sound_option_speed_bump">과속방지턱</string>
    <string name="sound_option_fog">안개주의</string>
    <string name="sound_option_fall">추락주의</string>
    <string name="sound_option_railroad_crossing">철길건널목</string>
    <string name="sound_option_scarp">급경사</string>
    <string name="sound_option_deer_crossing">야생동물보호</string>
</resources>