<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (c) 2016 kt corp. All rights reserved.
  ~
  ~  This is a proprietary software of kt corp, and you may not use this file
  ~  except in compliance with license agreement with kt corp. Any redistribution
  ~  or use of this software, with or without modification shall be strictly
  ~  prohibited without prior written approval of kt corp, and the copyright
  ~   notice above does not evidence any actual or intended publication of such
  ~  software.
  ~
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context="com.kt.rozenavi.ui.setting.SettingCarActivity">

        <include
            android:id="@+id/title_bar"
            layout="@layout/layout_setting_action_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_title_height" />

        <ScrollView
            android:overScrollMode="never"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/SettingSubtitleStyle"
                    android:text="@string/setting_sound_activity_subtitle_type" />

                <RadioGroup
                    android:id="@+id/sound_type_radiogroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/sound_type_soft"
                        style="@style/RozeRadioItemStyle"
                        android:text="@string/sound_type_soft" />

                    <RadioButton
                        android:id="@+id/sound_type_sporty"
                        style="@style/RozeRadioItemStyle"
                        android:text="@string/sound_type_sporty" />
                </RadioGroup>

                <TextView
                    style="@style/SettingSubtitleStyle"
                    android:text="@string/setting_sound_activity_subtitle_option" />

                <LinearLayout
                    android:id="@+id/sound_option_checkbox_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/sound_option_fixed_speed_camera"
                        style="@style/RozeCheckBoxItemStyle"
                        android:text="@string/sound_option_fixed_speed_camera" />

                    <CheckBox
                        android:id="@+id/sound_option_movable_speed_camera"
                        style="@style/RozeCheckBoxItemStyle"
                        android:text="@string/sound_option_movable_speed_camera" />

                    <CheckBox
                        android:id="@+id/sound_option_signal_violation_camera"
                        style="@style/RozeCheckBoxItemStyle"
                        android:text="@string/sound_option_signal_violation_camera" />

                    <CheckBox
                        android:id="@+id/sound_option_bus_camera"
                        style="@style/RozeCheckBoxItemStyle"
                        android:text="@string/sound_option_bus_camera" />

                    <CheckBox
                        android:id="@+id/sound_option_traffic_camera"
                        style="@style/RozeCheckBoxItemStyle"
                        android:text="@string/sound_option_traffic_camera" />

                    <CheckBox
                        android:id="@+id/sound_option_stop_camera"
                        style="@style/RozeCheckBoxItemStyle"
                        android:text="@string/sound_option_stop_camera" />

                    <CheckBox
                        android:id="@+id/sound_option_overload_camera"
                        style="@style/RozeCheckBoxItemStyle"
                        android:text="@string/sound_option_overload_camera" />

                    <CheckBox
                        android:id="@+id/sound_option_interrupt_camera"
                        style="@style/RozeCheckBoxItemStyle"
                        android:text="@string/sound_option_interrupt_camera" />

                    <CheckBox
                        android:id="@+id/sound_option_cctv"
                        style="@style/RozeCheckBoxItemStyle"
                        android:text="@string/sound_option_cctv" />

                    <CheckBox
                        android:id="@+id/sound_option_shoulder"
                        style="@style/RozeCheckBoxItemStyle"
                        android:text="@string/sound_option_shoulder" />

                    <CheckBox
                        android:id="@+id/sound_option_sharp_curve"
                        style="@style/RozeCheckBoxItemStyle"
                        android:text="@string/sound_option_sharp_curve" />

                    <CheckBox
                        android:id="@+id/sound_option_accident_black_spot"
                        style="@style/RozeCheckBoxItemStyle"
                        android:text="@string/sound_option_accident_black_spot" />

                    <CheckBox
                        android:id="@+id/sound_option_lane_decrease"
                        style="@style/RozeCheckBoxItemStyle"
                        android:text="@string/sound_option_lane_decrease" />

                    <CheckBox
                        android:id="@+id/sound_option_rock_slide"
                        style="@style/RozeCheckBoxItemStyle"
                        android:text="@string/sound_option_rock_slide" />

                    <CheckBox
                        android:id="@+id/sound_option_slippery_surface"
                        style="@style/RozeCheckBoxItemStyle"
                        android:text="@string/sound_option_slippery_surface" />

                    <CheckBox
                        android:id="@+id/sound_option_speed_bump"
                        style="@style/RozeCheckBoxItemStyle"
                        android:text="@string/sound_option_speed_bump" />

                    <CheckBox
                        android:id="@+id/sound_option_fog"
                        style="@style/RozeCheckBoxItemStyle"
                        android:text="@string/sound_option_fog" />

                    <CheckBox
                        android:id="@+id/sound_option_fall"
                        style="@style/RozeCheckBoxItemStyle"
                        android:text="@string/sound_option_fall" />

                    <CheckBox
                        android:id="@+id/sound_option_railroad_crossing"
                        style="@style/RozeCheckBoxItemStyle"
                        android:text="@string/sound_option_railroad_crossing" />

                    <CheckBox
                        android:id="@+id/sound_option_scarp"
                        style="@style/RozeCheckBoxItemStyle"
                        android:text="@string/sound_option_scarp" />

                    <CheckBox
                        android:id="@+id/sound_option_deer_crossing"
                        style="@style/RozeCheckBoxItemStyle"
                        android:text="@string/sound_option_deer_crossing" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>