<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context="com.kt.rozenavi.ui.setting.SettingCarActivity">

        <include
            android:id="@+id/title_bar"
            layout="@layout/layout_setting_action_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_title_height" />

        <TextView
            style="@style/SettingSubtitleStyle"
            android:text="@string/setting_route_activity_subtitle_route_1" />

        <RadioGroup
            android:id="@+id/route_type_1_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/route_type_1_balanced"
                style="@style/RozeRadioItemStyle"
                android:text="@string/route_type_balanced" />

            <RadioButton
                android:id="@+id/route_type_1_highway"
                style="@style/RozeRadioItemStyle"
                android:text="@string/route_type_highway" />

            <RadioButton
                android:id="@+id/route_type_1_free_road"
                style="@style/RozeRadioItemStyle"
                android:text="@string/route_type_free_road" />

            <RadioButton
                android:id="@+id/route_type_1_shortest"
                style="@style/RozeRadioItemStyle"
                android:text="@string/route_type_shortest" />
        </RadioGroup>

        <TextView
            style="@style/SettingSubtitleStyle"
            android:text="@string/setting_route_activity_subtitle_route_2" />

        <RadioGroup
            android:id="@+id/route_type_2_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/route_type_2_balanced"
                style="@style/RozeRadioItemStyle"
                android:text="@string/route_type_balanced" />

            <RadioButton
                android:id="@+id/route_type_2_highway"
                style="@style/RozeRadioItemStyle"
                android:text="@string/route_type_highway" />

            <RadioButton
                android:id="@+id/route_type_2_free_road"
                style="@style/RozeRadioItemStyle"
                android:text="@string/route_type_free_road" />

            <RadioButton
                android:id="@+id/route_type_2_shortest"
                style="@style/RozeRadioItemStyle"
                android:text="@string/route_type_shortest" />
        </RadioGroup>
    </LinearLayout>
</layout>